--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Run a one-line script
         run: sleep 5
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run test script
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          chmod +x ./scripts/test.sh
+          ./scripts/test.sh
