--- a/scripts/.env
+++ b/scripts/.env
@@ -1,2 +1,2 @@
 GITHUB_REPOSITORY=SpandanK87/course-gh-actions
-GITHUB_TOKEN=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
+GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
