--- a/scripts/.env
+++ b/scripts/.env
@@ -1,2 +1,2 @@
-GITHUB_REPOSITORY=SpandanK87/course-gh-actions
-GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+GITHUB_REPOSITORY=${{ secrets.GH_REPOSITORY }}
+GITHUB_TOKEN=${{ secrets.GH_TOKEN }}
