--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ on:
   # schedule:
   #   - cron: "*/5 * * * *"
   # push:
-  #   paths: 
-  #     - 'scripts/test.sh'
+    paths: 
+      - 'scripts/test.sh'
   workflow_dispatch: 
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
