--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ name: test
 on:
   # schedule:
   #   - cron: "*/5 * * * *"
-  # push:
+  push:
     paths: 
       - 'scripts/test.sh'
   workflow_dispatch: 
