--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: sleep 5
-
+      # Runs a shell script to fetch commits from the repository  
       - name: Run test script
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
