--- a/.github/workflows/GH_Stats.yml
+++ b/.github/workflows/GH_Stats.yml
@@ -9,7 +9,7 @@ on:
   push:
     paths: 
       - 'scripts/test.sh'
-      - 'workflows/test.yml'
+      - 'workflows/GH_Stats.yml'
   workflow_dispatch: 
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
